--- a/docs/css/styles-index.css
+++ b/docs/css/styles-index.css
@@ -93,6 +93,7 @@ p {
 .btn-principal {
   background-color: var(--amarillo);
   color: #000;
+  letter-spacing: 0.5px;
 }
 
 .btn-secundario {
@@ -114,6 +115,7 @@ p {
 
 .hero-content span {
   color: var(--amarillo);
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
 }
 
 .hero-content h1 {
